added aria roles

--- a/about.html
+++ b/about.html
@@ -13,117 +13,118 @@
     <link rel="stylesheet" href="./resources/css/about.css">
   </head>
   <body>
-    <header>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+    <header role="banner">
+        <nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo-desktop" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo-mobile" src="./resources/images/logo-mobile.png" alt="PYT Dance Logo"></a>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a class="active" href="./about.html">About</a></li>
-              <li><a href="./classes.html">Classes</a></li>
-              <li><a href="./faculty.html">Faculty</a></li>
+            <ul role="menu" class="nav navbar-nav navbar-right">
+              <li role="menuitem"><a class="active" href="./about.html">About</a></li>
+              <li role="menuitem"><a href="./classes.html">Classes</a></li>
+              <li role="menuitem"><a href="./faculty.html">Faculty</a></li>
             </ul>
           </div>
         </nav>
     </header>
+    <main>
+      <div id="about-banner" class="jumbotron jumbotron-fluid" role="presentation">
+        <div class="container-fluid" role="presentation">
+          <div class="row center" role="presentation">
+            <div id="about-banner-img" class="col-lg-6" role="presentation">
+              <img src="./resources/images/workout-photo.png" alt="woman working out, running in place">
+            </div>
 
-    <div id="about-banner" class="jumbotron jumbotron-fluid" role="presentation">
-      <div class="container-fluid" role="presentation">
-        <div class="row center">
-          <div id="about-banner-img" class="col-lg-6">
-            <img src="./resources/images/workout-photo.png" alt="">
+          <div class="col-xs-12 col-lg-6" role="presentation">
+            <div class="about-content">
+              <h1>About PYT Dance</h1>
+              <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+            </div>
           </div>
+          </div>
+        </div>
+      </div>
 
-        <div class="col-xs-12 col-lg-6">
-          <div class="about-content">
-            <h1>About PYT Dance</h1>
+    <div aria-label="list of our dance studio's features" class="about-features">
+      <div class="container feature" role="presentation">
+        <div class="row horizontal-center" role="presentation">
+          <div class="col-xs-12 col-md-4" role="presentation">
+            <img src="./resources/images/icn-ballet.png" alt="ballet slipper icon">
+          </div>
+          <div class="col-xs-12 col-md-8 about-content" role="presentation">
+            <h1>Many Styles Of Dance</h1>
             <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
           </div>
         </div>
+      </div>
+      <div class="container feature" role="presentation">
+        <div class="row horizontal-center" role="presentation">
+          <div class="col-xs-12 col-md-4 pull-right" role="presentation">
+            <img src="./resources/images/icn-clock.png" alt="clock icon">
+          </div>
+          <div class="col-xs-12 col-md-8 about-content" role="presentation">
+            <h1>Many Styles Of Dance</h1>
+            <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+          </div>
+        </div>
+      </div>
+      <div class="container feature" role="presentation">
+        <div class="row horizontal-center" role="presentation">
+          <div class="col-xs-12 col-md-4" role="presentation">
+            <img src="./resources/images/icn-heart.png" alt="heart icon">
+          </div>
+          <div class="col-xs-12 col-md-8 about-content" role="presentation">
+            <h1>Many Styles Of Dance</h1>
+            <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+          </div>
+        </div>
+      </div>
+      <div class="container feature" role="presentation">
+        <div class="row horizontal-center" role="presentation">
+          <div class="col-xs-12 col-md-4 pull-right" role="presentation">
+            <img src="./resources/images/icn-chrysler.png" alt="chrysler building icon">
+          </div>
+          <div class="col-xs-12 col-md-8 about-content" role="presentation">
+            <h1>Many Styles Of Dance</h1>
+            <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+          </div>
         </div>
       </div>
     </div>
 
-  <div class="about-features">
-    <div class="container feature">
-      <div class="row horizontal-center">
-        <div class="col-xs-12 col-md-4">
-          <img src="./resources/images/icn-ballet.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-8 about-content">
-          <h1>Many Styles Of Dance</h1>
-          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
-        </div>
-      </div>
-    </div>
-    <div class="container feature">
-      <div class="row horizontal-center">
-        <div class="col-xs-12 col-md-4 pull-right">
-          <img src="./resources/images/icn-clock.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-8 about-content">
-          <h1>Many Styles Of Dance</h1>
-          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+      <div id="map" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
+        <div class="container-fluid container-right" role="presentation">
+          <div class=" col-xs-9 col-md-4 blueish-purple-container" role="presentation">
+            <h2>Just beside the Brooklyn Bridge.</h2>
+            <p><strong>PYT Dance Studio</strong></p>
+            <p>14 Bridge Street <br>
+              New York, NY 10101 <br>
+              212.867.5309 <br>
+              contact@pytdance.com
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container feature">
-      <div class="row horizontal-center">
-        <div class="col-xs-12 col-md-4">
-          <img src="./resources/images/icn-heart.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-8 about-content">
-          <h1>Many Styles Of Dance</h1>
-          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
-        </div>
-      </div>
-    </div>
-    <div class="container feature">
-      <div class="row horizontal-center">
-        <div class="col-xs-12 col-md-4 pull-right">
-          <img src="./resources/images/icn-chrysler.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-8 about-content">
-          <h1>Many Styles Of Dance</h1>
-          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div id="map" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
-      <div class="container-fluid container-right" role="presentation">
-        <div class=" col-xs-9 col-md-4 blueish-purple-container">
-          <h2>Just beside the Brooklyn Bridge.</h2>
-          <p><strong>PYT Dance Studio</strong></p>
-          <p>14 Bridge Street <br>
-            New York, NY 10101 <br>
-            212.867.5309 <br>
-            contact@pytdance.com
-          </p>
-        </div>
-      </div>
-    </div>
+    </main>
     <footer class="container-fluid">
       <div class="row">
-        <nav class="footer-nav">
+        <nav role="navigation" class="footer-nav">
             <div class="navbar-header">
               <a href="#" class="navbar-brand"><img src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
             </div>
-            <ul id="social" class="social-media">
-              <li><a href="#"><i class="fa-1x fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa-1x fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa-1x fa fa-instagram"></i></a></li>
+            <ul role="menu" id="social" class="social-media">
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-facebook"></i></a></li>
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-twitter"></i></a></li>
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-instagram"></i></a></li>
             </ul>
-            <ul class="navbar-right">
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Terms &amp; Conditions</a></li>
+            <ul role="menu" class="navbar-right">
+              <li role="menuitem"><a href="#">Contact Us</a></li>
+              <li role="menuitem"><a href="#">Terms &amp; Conditions</a></li>
             </ul>
         </nav>
       </div>
-      <div class="row footer-contact">
+      <div role="contentinfo" class="row footer-contact">
         <p>PYT Dance Studio | 14 Bridge Street, New York, NY 10101 | 212.867.5309 | contact@pytdance.com</p>
         <p>All Rights Reserved, &copy; 2016 PYT Dance Studio</p>
       </div>
