--- a/classes.html
+++ b/classes.html
@@ -13,181 +13,181 @@
     <link rel="stylesheet" href="./resources/css/classes.css">
   </head>
   <body>
-    <header>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+    <header role="banner">
+        <nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo-desktop" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo-mobile" src="./resources/images/logo-mobile.png" alt="PYT Dance Logo"></a>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="./about.html">About</a></li>
-              <li><a class="active" href="./classes.html">Classes</a></li>
-              <li><a href="./faculty.html">Faculty</a></li>
+            <ul role="menu" class="nav navbar-nav navbar-right">
+              <li role="menuitem"><a href="./about.html">About</a></li>
+              <li role="menuitem"><a class="active" href="./classes.html">Classes</a></li>
+              <li role="menuitem"><a href="./faculty.html">Faculty</a></li>
             </ul>
           </div>
         </nav>
     </header>
-
-    <div id="classes-banner" class="jumbotron jumbotron-fluid" role="presentation">
-      <div class="container-fluid" role="presentation">
-        <div class="row center">
-          <div id="classes-banner-img" class="col-lg-6">
-            <img src="./resources/images/classes-photo.png" alt="">
-          </div>
-
-          <div class="col-xs-12 col-lg-6">
-            <div class="classes-content">
-              <h1>Classes</h1>
-              <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+    <main>
+      <div id="classes-banner" class="jumbotron jumbotron-fluid" role="presentation">
+        <div class="container-fluid" role="presentation">
+          <div class="row center" role="presentation">
+            <div id="classes-banner-img" class="col-lg-6" role="presentation">
+              <img src="./resources/images/classes-photo.png" alt="Hands in the air waving like they want to sign up for dance classes">
+            </div>
+            <div class="col-xs-12 col-lg-6" role="presentation">
+              <div class="classes-content" role="presentation">
+                <h1>Classes</h1>
+                <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="container-fluid course-list">
-      <div class="row">
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+      <div aria-label="list of our courses" class="container-fluid course-list" role="presentation">
+        <div class="row" role="presentation">
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="course">
-            <h1>Jazzercise</h1>
-            <p>Mondays, Thursdays</p>
-            <p>12pm-12:45pm</p>
-            <p>Saturdays</p>
-            <p>11pm-11:45pm</p>
-            <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="course">
+              <h1>Jazzercise</h1>
+              <p>Mondays, Thursdays</p>
+              <p>12pm-12:45pm</p>
+              <p>Saturdays</p>
+              <p>11pm-11:45pm</p>
+              <p><small>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators and to compete against other talented young people across the country!</small></p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer class="container-fluid">
-      <div class="row">
-        <nav class="footer-nav">
+      <div class="row" role="presentation">
+        <nav role="navigation" class="footer-nav">
             <div class="navbar-header">
               <a href="#" class="navbar-brand"><img src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
             </div>
-            <ul id="social" class="social-media">
-              <li><a href="#"><i class="fa-1x fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa-1x fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa-1x fa fa-instagram"></i></a></li>
+            <ul role="menu" id="social" class="social-media">
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-facebook"></i></a></li>
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-twitter"></i></a></li>
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-instagram"></i></a></li>
             </ul>
-            <ul class="navbar-right">
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Terms &amp; Conditions</a></li>
+            <ul role="menu" class="navbar-right">
+              <li role="menuitem"><a href="#">Contact Us</a></li>
+              <li role="menuitem"><a href="#">Terms &amp; Conditions</a></li>
             </ul>
         </nav>
       </div>
-      <div class="row footer-contact">
+      <div role="contentinfo" class="row footer-contact">
         <p>PYT Dance Studio | 14 Bridge Street, New York, NY 10101 | 212.867.5309 | contact@pytdance.com</p>
         <p>All Rights Reserved, &copy; 2016 PYT Dance Studio</p>
       </div>
