--- a/faculty.html
+++ b/faculty.html
@@ -13,122 +13,123 @@
     <link rel="stylesheet" href="./resources/css/faculty.css">
   </head>
   <body>
-    <header>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+    <header role="banner">
+        <nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo-desktop" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo-mobile" src="./resources/images/logo-mobile.png" alt="PYT Dance Logo"></a>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="./about.html">About</a></li>
-              <li><a href="./classes.html">Classes</a></li>
-              <li><a class="active" href="./faculty.html">Faculty</a></li>
+            <ul role="menu" class="nav navbar-nav navbar-right">
+              <li role="menuitem"><a href="./about.html">About</a></li>
+              <li role="menuitem"><a href="./classes.html">Classes</a></li>
+              <li role="menuitem"><a class="active" href="./faculty.html">Faculty</a></li>
             </ul>
           </div>
         </nav>
     </header>
-    <div id="faculty-banner" class="jumbotron jumbotron-fluid" role="presentation">
-      <div class="jumbo-content container-fluid" role="presentation">
-        <h1>Faculty</h1>
-        <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
-      </div>
-    </div>
-    <div class="container trainers">
-      <div class="row">
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/johnny.png" alt="">
-            <h2>Johnny Thunder</h2>
-            <p><strong>Co-founder</strong></p>
-            <p>Tap, Jazz, Jazz-Hands, Jazz-Tap, Tap-Tap, Belly.</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/ella.png" alt="">
-            <h2>Ella McDonald</h2>
-            <p><strong>Co-Founder</strong></p>
-            <p>Fact and Truth</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/ann.png" alt="">
-            <h2>Ann Wade</h2>
-            <p><strong>Instructor</strong></p>
-            <p>The Idea of Watching TV</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/gary.png" alt="">
-            <h2>Gary Rivera</h2>
-            <p><strong>Instructor</strong></p>
-            <p>Vampires The Romantic Ideology Behind Them</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/helena.png" alt="">
-            <h2>Helena Rodriguez</h2>
-            <p><strong>Instructor</strong></p>
-            <p>When the Morning Dawns</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/noah.png" alt="">
-            <h2>Noah Craig</h2>
-            <p><strong>Instructor</strong></p>
-            <p>The Basics Of Western Astrology Explained</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/luella.png" alt="">
-            <h2>Luella Pierce</h2>
-            <p><strong>Instructor</strong></p>
-            <p>Alternative Facts</p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/eva.png" alt="">
-            <h2>Eva Shelton</h2>
-            <p><strong>Instructor</strong></p>
-            <p>A Brief History Of Life</p>
-          </div>
-        </div>
-        <div class="col-md-12 col-lg-4" >
-          <div class="trainer-card">
-            <img src="./resources/images/faculty/aaron.png" alt="">
-            <h2>Aaron Parks</h2>
-            <p><strong>Instructor</strong></p>
-            <p>Words To Live By</p>
-          </div>
+    <main>
+      <div id="faculty-banner" class="jumbotron jumbotron-fluid" role="presentation">
+        <div class="jumbo-content container-fluid" role="presentation">
+          <h1>Faculty</h1>
+          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
         </div>
       </div>
-    </div>
-
-    <footer class="container-fluid">
-      <div class="row">
-        <nav class="footer-nav">
+      <div class="container trainers" aria-label="list of our staff and trainers" role="presentation">
+        <div class="row" role="presentation">
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/johnny.png" alt="Johnny Thunder Portrait">
+              <h2>Johnny Thunder</h2>
+              <p><strong>Co-founder</strong></p>
+              <p>Tap, Jazz, Jazz-Hands, Jazz-Tap, Tap-Tap, Belly.</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/ella.png" alt="Ella McDonald Portrait">
+              <h2>Ella McDonald</h2>
+              <p><strong>Co-Founder</strong></p>
+              <p>Fact and Truth</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/ann.png" alt="Ann Wade Portrait">
+              <h2>Ann Wade</h2>
+              <p><strong>Instructor</strong></p>
+              <p>The Idea of Watching TV</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/gary.png" alt="Gary Rivera Portrait">
+              <h2>Gary Rivera</h2>
+              <p><strong>Instructor</strong></p>
+              <p>Vampires The Romantic Ideology Behind Them</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/helena.png" alt="Helena Rodriguez Portrait">
+              <h2>Helena Rodriguez</h2>
+              <p><strong>Instructor</strong></p>
+              <p>When the Morning Dawns</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/noah.png" alt="Noah Craig Portrait">
+              <h2>Noah Craig</h2>
+              <p><strong>Instructor</strong></p>
+              <p>The Basics Of Western Astrology Explained</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/luella.png" alt="Luella Pierce Portrait">
+              <h2>Luella Pierce</h2>
+              <p><strong>Instructor</strong></p>
+              <p>Alternative Facts</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/eva.png" alt="Eva Shelton Portrait">
+              <h2>Eva Shelton</h2>
+              <p><strong>Instructor</strong></p>
+              <p>A Brief History Of Life</p>
+            </div>
+          </div>
+          <div class="col-md-12 col-lg-4" role="presentation">
+            <div class="trainer-card">
+              <img src="./resources/images/faculty/aaron.png" alt="Aaron Parks Portrait">
+              <h2>Aaron Parks</h2>
+              <p><strong>Instructor</strong></p>
+              <p>Words To Live By</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="container-fluid" role="presentation">
+      <div class="row" role="presentation">
+        <nav role="navigation" class="footer-nav">
             <div class="navbar-header">
               <a href="#" class="navbar-brand"><img src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
             </div>
-            <ul id="social" class="social-media">
-              <li><a href="#"><i class="fa-1x fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa-1x fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa-1x fa fa-instagram"></i></a></li>
+            <ul role="menu" id="social" class="social-media">
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-facebook"></i></a></li>
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-twitter"></i></a></li>
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-instagram"></i></a></li>
             </ul>
-            <ul class="navbar-right">
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Terms &amp; Conditions</a></li>
+            <ul role="menu" class="navbar-right">
+              <li role="menuitem"><a href="#">Contact Us</a></li>
+              <li role="menuitem"><a href="#">Terms &amp; Conditions</a></li>
             </ul>
         </nav>
       </div>
-      <div class="row footer-contact">
+      <div role="contentinfo" class="row footer-contact">
         <p>PYT Dance Studio | 14 Bridge Street, New York, NY 10101 | 212.867.5309 | contact@pytdance.com</p>
         <p>All Rights Reserved, &copy; 2016 PYT Dance Studio</p>
       </div>
