--- a/index.html
+++ b/index.html
@@ -13,77 +13,78 @@
     <link rel="stylesheet" href="./resources/css/index.css">
   </head>
   <body>
-    <header>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+    <header role="banner">
+        <nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid" role="presentation">
             <div class="navbar-header">
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo-desktop" src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
               <a href="./index.html" class="navbar-brand"><img id="pyt-logo-mobile" src="./resources/images/logo-mobile.png" alt="PYT Dance Logo"></a>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="./about.html">About</a></li>
-              <li><a href="./classes.html">Classes</a></li>
-              <li><a href="./faculty.html">Faculty</a></li>
+            <ul role="menu" class="nav navbar-nav navbar-right">
+              <li role="menuitem"><a href="./about.html">About</a></li>
+              <li role="menuitem"><a href="./classes.html">Classes</a></li>
+              <li role="menuitem"><a href="./faculty.html">Faculty</a></li>
             </ul>
           </div>
         </nav>
     </header>
-    <div id="home-banner" class="jumbotron jumbotron-fluid" role="presentation">
-      <div class="jumbo-content container-fluid" role="presentation">
-        <h1>Move Your Body &amp; Your Soul</h1>
-        <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
-        <a href="#" class="btn btn-primary" role="button">Buy a Course Card</a>
-      </div>
-    </div>
-
-    <div id="booty" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
-      <div class="container-fluid container-right" role="presentation">
-        <div class="col-xs-12 col-md-4 blueish-purple-container">
-          <h2>Move Your Body &amp; Your Soul</h2>
+    <main>
+      <div id="home-banner" class="jumbotron jumbotron-fluid" role="presentation">
+        <div class="jumbo-content container-fluid" role="presentation">
+          <h1>Move Your Body &amp; Your Soul</h1>
           <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
-          <a href="#">Read more on the blog</a>
+          <a href="#" class="btn btn-primary" role="button">Buy a Course Card</a>
         </div>
       </div>
-    </div>
 
-    <div id="fire" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
-      <div class="container-fluid container-right" role="presentation">
-        <div class="col-xs-12 col-md-4 purple-container">
-          <h2>Move Your Body &amp; Your Soul</h2>
-          <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
-          <a href="#">Read more on the blog</a>
-        </div>
-      </div>
-    </div>
-
-    <div id="jump" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
-      <div class="container-fluid container-right" role="presentation">
-        <div class="col-xs-12 col-md-4 blueish-purple-container">
+      <div id="booty" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
+        <div class="container-fluid container-right" role="presentation">
+          <div class="col-xs-12 col-md-4 blueish-purple-container" role="presentation">
             <h2>Move Your Body &amp; Your Soul</h2>
             <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
             <a href="#">Read more on the blog</a>
+          </div>
         </div>
       </div>
-    </div>
 
+      <div id="fire" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
+        <div class="container-fluid container-right" role="presentation">
+          <div class="col-xs-12 col-md-4 purple-container" role="presentation">
+            <h2>Move Your Body &amp; Your Soul</h2>
+            <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
+            <a href="#">Read more on the blog</a>
+          </div>
+        </div>
+      </div>
+
+      <div id="jump" class="jumbotron jumbotron-fluid alt-jumbotron" role="presentation">
+        <div class="container-fluid container-right" role="presentation">
+          <div class="col-xs-12 col-md-4 blueish-purple-container" role="presentation">
+              <h2>Move Your Body &amp; Your Soul</h2>
+              <p>Formed 35 years ago to afford promising and dedicated young dancers the opportunity to study with the dance community’s most distinguished dance educators!</p>
+              <a href="#">Read more on the blog</a>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="container-fluid">
-      <div class="row">
-        <nav class="footer-nav">
-            <div class="navbar-header">
+      <div class="row" role="presentation">
+        <nav role="navigation" class="footer-nav">
+            <div class="navbar-header" role="presentation">
               <a href="#" class="navbar-brand"><img src="./resources/images/logo-color.png" alt="PYT Dance Logo"></a>
             </div>
-            <ul id="social" class="social-media">
-              <li><a href="#"><i class="fa-1x fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa-1x fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa-1x fa fa-instagram"></i></a></li>
+            <ul role="menu" id="social" class="social-media">
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-facebook"></i></a></li>
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-twitter"></i></a></li>
+              <li role="menuitem"><a href="#"><i class="fa-1x fa fa-instagram"></i></a></li>
             </ul>
-            <ul class="navbar-right">
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Terms &amp; Conditions</a></li>
+            <ul role="menu" class="navbar-right">
+              <li role="menuitem"><a href="#">Contact Us</a></li>
+              <li role="menuitem"><a href="#">Terms &amp; Conditions</a></li>
             </ul>
         </nav>
       </div>
-      <div class="row footer-contact">
+      <div role="contentinfo" class="row footer-contact">
         <p>PYT Dance Studio | 14 Bridge Street, New York, NY 10101 | 212.867.5309 | contact@pytdance.com</p>
         <p>All Rights Reserved, &copy; 2016 PYT Dance Studio</p>
       </div>
